--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -60,7 +60,7 @@
                         <th pSortableColumn="phone" style="width:10%">Phone <p-sortIcon field="phone"></p-sortIcon></th>
                         <th pSortableColumn="state" style="width:10%">Travel Date <p-sortIcon field="state"></p-sortIcon></th>
                         <th pSortableColumn="status" style="width:10%">Status <p-sortIcon field="status"></p-sortIcon></th>
-                        <th pSortableColumn="createdAt" style="width:10%">Creadted on <p-sortIcon field="createdAt"></p-sortIcon></th>
+                        <th pSortableColumn="createdAt" style="width:10%">Created on <p-sortIcon field="createdAt"></p-sortIcon></th>
                         <th style="width:15%">Actions</th>
                     </tr>
                 </ng-template>
@@ -75,10 +75,28 @@
                         <td class="' py-2">{{booking.status}}</td>
                         <td class="' py-2">{{booking.createdAt | date: 'dd/MM/yyyy'}}</td>
                         <td>
-                            
-                            <button (click)="displayBooking = true; populateBooking(booking)" class="px-4 py-1 text-white rounded-md text-sm mx-2 hover:bg-primary-900 bg-primary-700">Edit</button>
-                            <button (click)="confirmDelete(booking._id)" class="px-4 py-1 text-white rounded-md text-sm mx-2 hover:bg-red-900 bg-red-700">Delete</button>
-                        </td>
+                            <button (click)="op.toggle($event)" class="inline-flex items-center p-0.5 text-sm font-medium text-center text-gray-500 hover:text-gray-800 rounded-lg focus:outline-none dark:text-gray-400 dark:hover:text-gray-100" type="button">
+                                <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M6 10a2 2 0 11-4 0 2 2 0 014 0zM12 10a2 2 0 11-4 0 2 2 0 014 0zM16 12a2 2 0 100-4 2 2 0 000 4z" />
+                                </svg>
+                            </button>
+                            <p-overlayPanel #op styleClass="p-0">
+                            <div id="apple-imac-27-dropdown" class=" z-10 w-44 bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600">
+                                <ul class="py-1 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="apple-imac-27-dropdown-button">
+                                    <li>
+                                        <a href="#" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Show</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Edit</a>
+                                    </li>
+                                </ul>
+                                <div class="py-1">
+                                    <a href="#" class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete</a>
+                                </div>
+                            </div>
+                        </p-overlayPanel>
+
+                          </td>
                      
                     </tr>
                 </ng-template>
