--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -29,7 +29,7 @@
                     <span class="dark:text-white"> {{bookings.length}}</span>
                 </h5>
 
-                <button state="button" (click)="showDialog()"
+                <button state="button" 
                     class="flex items-center justify-center flex-shrink-0 px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg focus:outline-none hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
                     <svg class="w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24"
                         stroke-width="2" stroke="currentColor" aria-hidden="true">
@@ -67,13 +67,13 @@
                 <ng-template pTemplate="body" let-booking>
                     <tr  class="border-b border-gray-300">
 
-                        <td class="' py-2">{{booking.bookingId}}</td>
-                        <td class="' py-2">{{booking.firstName}}, {{booking.lastName}}</td>
-                        <td class="' py-2">{{booking.email}}</td>
-                        <td class="' py-2">{{booking.phone}}</td>
-                        <td class="' py-2">{{booking.trip?.tripDate | date: 'dd/MM/yyyy'}}</td>
-                        <td class="' py-2">{{booking.status}}</td>
-                        <td class="' py-2">{{booking.createdAt | date: 'dd/MM/yyyy'}}</td>
+                        <td class="py-2">{{booking.bookingId}}</td>
+                        <td class="py-2">{{booking.firstName}}, {{booking.lastName}}</td>
+                        <td class="py-2">{{booking.email}}</td>
+                        <td class="py-2">{{booking.phone}}</td>
+                        <td class="py-2">{{booking.trip?.tripDate | date: 'dd/MM/yyyy'}}</td>
+                        <td class="py-2 capitalize">{{booking.status}}</td>
+                        <td class="py-2">{{booking.createdAt | date: 'dd/MM/yyyy'}}</td>
                         <td>
                             <button (click)="op.toggle($event)" class="inline-flex items-center p-0.5 text-sm font-medium text-center text-gray-500 hover:text-gray-800 rounded-lg focus:outline-none dark:text-gray-400 dark:hover:text-gray-100" type="button">
                                 <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -84,7 +84,7 @@
                             <div id="apple-imac-27-dropdown" class=" z-10 w-44 bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600">
                                 <ul class="py-1 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="apple-imac-27-dropdown-button">
                                     <li>
-                                        <a href="#" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Show</a>
+                                        <a href="javascript:void(0)" (click)="showBookingDialog(booking)" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">View Booking</a>
                                     </li>
                                     <li>
                                         <a href="#" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Edit</a>
@@ -172,3 +172,83 @@
 </ng-template>
 </p-dialog>
 
+<p-dialog header="Booking Info" [(visible)]="bookingInfoShow" [modal]="true" [draggable]="false" [resizable]="false">
+    <div class="lg:w-full w-[40vh]">
+
+    <h1 class="text-xl mb-4 mt-3">#{{bookingInfo?.uniqueBookingId}}</h1>
+
+    <h4 class="text-base font-semibold mt-5 mb-3">Traveller Information</h4>
+    <div class="grid grid-cols-1 lg:grid-cols-4">
+        <div class="border border-gray-100 m-2 p-2">
+            <small>First Name</small>
+            <p>{{bookingInfo?.firstName}}</p>
+        </div>
+        <div class="border border-gray-100 m-2 p-2">
+            <small>Middle Name</small>
+            <p>{{bookingInfo?.middleName}}</p>
+        </div>
+        <div class="border border-gray-100 m-2 p-2">
+            <small>Last Name</small>
+            <p>{{bookingInfo?.lastName}}</p>
+        </div>
+        <div class="border border-gray-100 m-2 p-2">
+            <small>Email</small>
+            <p>{{bookingInfo?.email}}</p>
+        </div>
+        <div class="border border-gray-100 m-2 p-2">
+            <small>Phone</small>
+            <p>{{bookingInfo?.phone}}</p>
+        </div>
+        <div class="border border-gray-100 m-2 p-2">
+            <small>Date of Birth</small>
+            <p>{{bookingInfo?.dob | date: 'dd/MM/yyyy' }}</p>
+        </div>
+        <div class="border border-gray-100 m-2 p-2">
+            <small>Gender</small>
+            <p>{{bookingInfo?.gender}}</p>
+        </div>
+
+    </div>
+    <h4 class="text-base font-semibold mt-5 mb-3">Emergency Contact</h4>
+    <div class="grid grid-cols-1 lg:grid-cols-4">
+
+        <div class="border border-gray-100 m-2 p-2">
+            <small>First Name</small>
+            <p>{{bookingInfo?.emergencyFirstName}}</p>
+        </div>
+        <div class="border border-gray-100 m-2 p-2">
+            <small>Last Name</small>
+            <p>{{bookingInfo?.emergencyLastName}}</p>
+        </div>
+        <div class="border border-gray-100 m-2 p-2">
+            <small>Phone </small>
+            <p>{{bookingInfo?.emergencyPhone}}</p>
+        </div>
+        <div class="border border-gray-100 m-2 p-2">
+            <small>Emial </small>
+            <p>{{bookingInfo?.emergencyEmail}}</p>
+        </div>
+    </div>
+
+    <h4 class="text-base font-semibold mt-5 mb-3">Trip Information</h4>
+    <div class="grid grid-cols-1 lg:grid-cols-4">
+        <div class="border border-gray-100 m-2 p-2">
+            <small>Trip Route</small>
+            <p>{{bookingInfo?.trip.title}}</p>
+        </div>
+        <div class="border border-gray-100 m-2 p-2">
+            <small>Trip Date</small>
+            <p>{{bookingInfo?.trip.tripDate}}</p>
+        </div>
+        <div class="border border-gray-100 m-2 p-2">
+            <small>Time </small>
+            <p>{{bookingInfo?.trip.time}}</p>
+        </div>
+        <div class="border border-gray-100 m-2 p-2">
+            <small>Seat No. </small>
+            <p>{{bookingInfo?.tripSeat}}</p>
+        </div>
+    </div>
+</div>
+
+</p-dialog>
