--- a/src/app/trips/trips.component.html
+++ b/src/app/trips/trips.component.html
@@ -78,7 +78,7 @@
                         <td class="' py-2">{{trip.route.title}}</td>
                         <td class="' py-2">{{trip.driver?.firstName}} {{trip.driver?.lastName}}</td>
                         <td class="' py-2">{{trip.availableSeats}}</td>
-                        <td class="' py-2">{{trip.status}}</td>
+                        <td class="' py-2 capitalize">{{trip.status}}</td>
                         <td class="' py-2">{{trip.createdAt | date: 'dd/MM/yyyy'}}</td>
                         <td>
 
@@ -92,6 +92,12 @@
                                 <ul class="py-1 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="apple-imac-27-dropdown-button">
                                     <li>
                                         <a href="javascript:void(0)" (click)="displayTrip = true; populateTrip(trip)" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Edit</a>
+                                    </li>
+                                    <li>
+                                        <a href="javascript:void(0)" (click)="displayTrip = true; populateTrip(trip)" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">View Bookings</a>
+                                    </li>
+                                    <li>
+                                        <a href="javascript:void(0)" (click)=" markAsCompleted()" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mark trip as completed</a>
                                     </li>
                                     <!-- <li>
                                         <a href="#" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Edit</a>
