--- a/src/app/routes/routes.component.html
+++ b/src/app/routes/routes.component.html
@@ -58,26 +58,27 @@
                 <ng-template pTemplate="header">
                     <tr>
                         <th pSortableColumn="title" style="width:10%">Title <p-sortIcon field="title"></p-sortIcon></th>
-                        <th pSortableColumn="title" style="width:10%">Price <p-sortIcon field="title"></p-sortIcon></th>
+                        <th pSortableColumn="title" style="width:20%">Price <p-sortIcon field="title"></p-sortIcon></th>
                         <th pSortableColumn="origin" style="width:10%">Origin <p-sortIcon field="origin"></p-sortIcon>
                         </th>
                         <th pSortableColumn="destination" style="width:10%">Destination <p-sortIcon
                                 field="destination"></p-sortIcon></th>
-                                <th pSortableColumn="destination" style="width:10%">Bus <p-sortIcon
-                                    field="destination"></p-sortIcon></th>
+                        <th pSortableColumn="destination" style="width:10%">Bus <p-sortIcon
+                                field="destination"></p-sortIcon></th>
                         <th pSortableColumn="recurrentDays" style="width:15%">Route's Days <p-sortIcon
                                 field="recurrentDays"></p-sortIcon></th>
                         <th pSortableColumn="totalTrips" style="width:10%">Trips per day <p-sortIcon
                                 field="totalTrips"></p-sortIcon></th>
                         <th pSortableColumn="createdAt" style="width:10%">Created on <p-sortIcon
                                 field="createdAt"></p-sortIcon></th>
-                        <th style="width:15%">Actions</th>
+                        <th style="width:5%">Actions</th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-route>
                     <tr class="border-b border-gray-300">
                         <td class="' py-2">{{route.title}}</td>
-                        <td class="' py-2">{{route.price}}</td>
+                        <td class="' py-2">N:{{route.price}}, P: {{route.premiumPrice}},D
+                            {{route.discountedPrice}}</td>
                         <td class="' py-2">{{route.origin}}</td>
                         <td class="' py-2">{{route.destination}}</td>
                         <td class="' py-2">{{route.bus.title}}</td>
@@ -86,10 +87,36 @@
                         <td class="' py-2">{{route.createdAt | date: 'dd/MM/yyyy'}}</td>
                         <td>
 
-                            <button (click)="displayRoute = true; populateRoute(route)"
-                                class="px-4 py-1 text-white rounded-md text-sm mx-2 hover:bg-primary-900 bg-primary-700">Edit</button>
-                            <button (click)="confirmDelete(route._id)"
-                                class="px-4 py-1 text-white rounded-md text-sm mx-2 hover:bg-red-900 bg-red-700">Delete</button>
+                            <button (click)="op.toggle($event)"
+                                class="inline-flex items-center p-0.5 text-sm font-medium text-center text-gray-500 hover:text-gray-800 rounded-lg focus:outline-none dark:text-gray-400 dark:hover:text-gray-100"
+                                type="button">
+                                <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M6 10a2 2 0 11-4 0 2 2 0 014 0zM12 10a2 2 0 11-4 0 2 2 0 014 0zM16 12a2 2 0 100-4 2 2 0 000 4z" />
+                                </svg>
+                            </button>
+                            <p-overlayPanel #op styleClass="p-0">
+                                <div id="apple-imac-27-dropdown"
+                                    class=" z-10 w-44 bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600">
+                                    <ul class="py-1 text-sm text-gray-700 dark:text-gray-200"
+                                        aria-labelledby="apple-imac-27-dropdown-button">
+
+                                        <li>
+                                            <a (click)="displayRoute = true; populateRoute(route)"
+                                                href="javascript:void(0)"
+                                                class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Edit</a>
+                                        </li>
+
+                                    </ul>
+                                    <div class="py-1">
+                                        <a (click)="confirmDelete(route._id)" href="javascript:void(0)"
+                                            class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Delete</a>
+
+                                    </div>
+                                </div>
+                            </p-overlayPanel>
+
                         </td>
 
                     </tr>
@@ -133,13 +160,27 @@
             <small class="w-ful inline-block " *ngIf="f.destination.hasError('required') && f.destination.touched"
                 id="state-help" class="p-error">Please select route's destination</small>
 
-                <span class=" w-full mb-1 block mt-8">
-                    <span class="block w-full mb-1"> Price </span>
-                    <input formControlName="price" class="border w-full p-3 rounded"
-                        placeholder="Route Price">
-                </span>
-                <small class="w-ful mb-4 inline-block" *ngIf="f.price.hasError('required') && f.price.touched"
-                    id="address-help" class="p-error">Please enter price</small>
+            <span class=" w-full mb-1 block mt-8">
+                <span class="block w-full mb-1"> Basic Price </span>
+                <input formControlName="price" class="border w-full p-3 rounded" placeholder="Route Basic Price">
+            </span>
+            <small class="w-ful mb-4 inline-block" *ngIf="f.price.hasError('required') && f.price.touched"
+                id="address-help" class="p-error">Please enter price</small>
+
+            <span class=" w-full mb-1 block mt-8">
+                <span class="block w-full mb-1"> Premium Price </span>
+                <input formControlName="premiumPrice" class="border w-full p-3 rounded"
+                    placeholder="Route Premium Price">
+            </span>
+            <small class="w-ful mb-4 inline-block" *ngIf="f.premiumPrice.hasError('required') && f.premiumPrice.touched"
+                id="address-help" class="p-error">Please enter premium price</small>
+
+            <span class=" w-full mb-1 block mt-8">
+                <span class="block w-full mb-1"> Discounted Price </span>
+                <input formControlName="discountedPrice" class="border w-full p-3 rounded" placeholder="Route Price">
+            </span>
+            <small class="w-ful mb-4 inline-block" *ngIf="f.discountedPrice.hasError('required') && f.discountedPrice.touched"
+                id="address-help" class="p-error">Please enter discounted price</small>
 
             <span class="w-full mb-1 block mt-8">
                 <span class="block w-full mb-1"> Bus </span>
