--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -34,7 +34,7 @@
 
         <div class="lg:w-3/4 w-full p-0">
             <div *ngIf="current ==  'general'">
-                <p>djkk</p>
+                <p>Coming Soon!</p>
                 <!-- <app-locations></app-locations> -->
             </div>
             <div *ngIf="current ==  'locations'">
