--- a/src/app/trips/trips.component.html
+++ b/src/app/trips/trips.component.html
@@ -104,7 +104,8 @@
                                     </li> -->
                                 </ul>
                                 <div class="py-1">
-                                    <a href="javascript:void(0)" (click)="deleteTrips(trip.id)" class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete</a>
+                                    <a href="javascript:void(0)" (click)="confirmDelete(trip._id)" class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete</a>
+                                    <p-confirmPopup></p-confirmPopup>
                                 </div>
                             </div>
                         </p-overlayPanel>
