--- a/src/app/routes/routes.component.html
+++ b/src/app/routes/routes.component.html
@@ -58,15 +58,17 @@
                 <ng-template pTemplate="header">
                     <tr>
                         <th pSortableColumn="title" style="width:10%">Title <p-sortIcon field="title"></p-sortIcon></th>
-                        <th pSortableColumn="title" style="width:20%">Price <p-sortIcon field="title"></p-sortIcon></th>
+                        <th pSortableColumn="title" style="width:15%">Price <p-sortIcon field="title"></p-sortIcon></th>
                         <th pSortableColumn="origin" style="width:10%">Origin <p-sortIcon field="origin"></p-sortIcon>
                         </th>
                         <th pSortableColumn="destination" style="width:10%">Destination <p-sortIcon
                                 field="destination"></p-sortIcon></th>
-                        <th pSortableColumn="destination" style="width:10%">Bus <p-sortIcon
+                        <th pSortableColumn="destination" style="width:5%">Bus <p-sortIcon
                                 field="destination"></p-sortIcon></th>
                         <th pSortableColumn="recurrentDays" style="width:15%">Route's Days <p-sortIcon
                                 field="recurrentDays"></p-sortIcon></th>
+                                <th pSortableColumn="recurrentDays" style="width:15%">Route's Times <p-sortIcon
+                                    field="recurrentDays"></p-sortIcon></th>
                         <th pSortableColumn="totalTrips" style="width:10%">Trips per day <p-sortIcon
                                 field="totalTrips"></p-sortIcon></th>
                         <th pSortableColumn="createdAt" style="width:10%">Created on <p-sortIcon
@@ -83,6 +85,7 @@
                         <td class="' py-2">{{route.destination}}</td>
                         <td class="' py-2">{{route.bus.title}}</td>
                         <td class="' py-2">{{route.recurrentDays}}</td>
+                        <td class="' py-2">{{route.times}}</td>
                         <td class="' py-2">{{route.totalTrips}}</td>
                         <td class="' py-2">{{route.createdAt | date: 'dd/MM/yyyy'}}</td>
                         <td>
