--- a/src/app/trips/trips.component.html
+++ b/src/app/trips/trips.component.html
@@ -38,6 +38,15 @@
                     </svg>
                     Export
                 </button>
+                <button state="button" (click)="confirmMultipleDelete()"
+                class="flex items-center justify-center flex-shrink-0 px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg focus:outline-none hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+                <svg class="w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24"
+                    stroke-width="2" stroke="currentColor" aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5m-13.5-9L12 3m0 0l4.5 4.5M12 3v13.5" />
+                </svg>
+                Delete Selected
+            </button>
                 <button state="button" (click)="showDialog(); submitType ='Add'"
                     class="flex items-center justify-center px-4 py-2 text-sm font-medium text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800">
                     <svg class="h-3.5 w-3.5 mr-2" fill="currentColor" viewbox="0 0 20 20"
@@ -55,7 +64,12 @@
                 currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
                 [showCurrentPageReport]="true" [tableStyle]="{'min-width': '60rem'}">
                 <ng-template pTemplate="header">
-                    <tr>
+                    <tr>    <th scope="col" class="p-4">
+                        <div class="flex items-center">
+                            <input id="checkbox-all" [(ngModel)]="checkAllStatus" (change)="checkAll()" type="checkbox" class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                            <label for="checkbox-all" class="sr-only">checkbox</label>
+                        </div>
+                    </th>
                         <th pSortableColumn="firstName" style="width:15%">Title <p-sortIcon field="firstName"></p-sortIcon></th>
                         <th pSortableColumn="firstName" style="width:10%">Date <p-sortIcon field="firstName"></p-sortIcon></th>
                         <th pSortableColumn="firstName" style="width:5%">Time <p-sortIcon field="firstName"></p-sortIcon></th>
@@ -71,7 +85,13 @@
                 </ng-template>
                 <ng-template pTemplate="body" let-trip>
                     <tr class="border-b border-gray-300">
-
+                        <td class="w-4 px-4 py-3">
+                            <div class="flex items-center">
+                                <input id="checkbox-table-search-1" type="checkbox" [checked]="selectedRecordIds.includes(trip._id)" (change)="onRecordSelectionChange(trip)" class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                                <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+                            </div>
+                        </td>
+                        <td class="' py-2">{{trip.title}}</td>
                         <td class="' py-2">{{trip.title}}</td>
                         <td class="' py-2">{{trip.tripDate | date: 'dd/MM/yyyy'}}</td>
                         <td class="' py-2">{{trip.time}}</td>
@@ -105,7 +125,6 @@
                                 </ul>
                                 <div class="py-1">
                                     <a href="javascript:void(0)" (click)="confirmDelete(trip._id)" class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete</a>
-                                    <p-confirmPopup></p-confirmPopup>
                                 </div>
                             </div>
                         </p-overlayPanel>
