--- a/src/app/trips/trips.component.html
+++ b/src/app/trips/trips.component.html
@@ -92,7 +92,7 @@
                             </div>
                         </td>
                         <td class="' py-2">{{trip.title}}</td>
-                        <td class="' py-2">{{trip.tripDate | date: 'dd/MM/yyyy'}}</td>
+                        <td class="' py-2">{{trip.tripDate }}</td>
                         <td class="' py-2">{{trip.time}}</td>
                         <td class="' py-2">{{trip.route.title}}</td>
                         <td class="' py-2">{{trip.driver?.firstName}} {{trip.driver?.lastName}}</td>
