--- a/src/app/trips/trips.component.html
+++ b/src/app/trips/trips.component.html
@@ -15,7 +15,8 @@
                                         clip-rule="evenodd" />
                                 </svg>
                             </div>
-                            <input state="text" id="simple-search"
+                            <input pInputText type="text" (input)="dt1.filterGlobal($event.target.value, 'contains')" 
+
                                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                                 placeholder="Search" required="">
                         </div>
@@ -60,7 +61,9 @@
             </div>
         </div>
         <div class="overflow-x-auto">
-            <p-table [value]="trips" [paginator]="true" [rows]="10"
+            <p-table  #dt1
+            [globalFilterFields]="['title', 'route.title', 'status', 'tripDate']"
+            [value]="trips" [paginator]="true" [rows]="10"
                 currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
                 [showCurrentPageReport]="true" [tableStyle]="{'min-width': '60rem'}">
                 <ng-template pTemplate="header">
