--- a/src/app/buses/buses.component.html
+++ b/src/app/buses/buses.component.html
@@ -124,7 +124,7 @@
                 <span class="block w-full mb-3"> Bus Image </span>
 
                 <input id="title" state="text" pInputText formControlName="photo" class="border w-full p-3 rounded"
-                    placeholder="Img url">
+                    placeholder="Img url" required>
             </span>
             <span class="w-full mb-1 block mt-8">
                 <span class="block w-full mb-1"> Type </span>
