--- a/src/app/trips/trips.component.html
+++ b/src/app/trips/trips.component.html
@@ -97,7 +97,7 @@
                         <td class="' py-2">{{trip.title}}</td>
                         <td class="' py-2">{{trip.tripDate }}</td>
                         <td class="' py-2">{{trip.time}}</td>
-                        <td class="' py-2">{{trip.route.title}}</td>
+                        <td class="' py-2">{{trip.route?.title}}</td>
                         <td class="' py-2">{{trip.driver?.firstName}} {{trip.driver?.lastName}}</td>
                         <td class="' py-2">{{trip.availableSeats}}</td>
                         <td class="' py-2 capitalize">{{trip.status}}</td>
